<resources>
    <string name="app_name">Foodies Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!-- three dots -->
    <string name="action_editProfile">Edit Profile</string>
    <string name="action_chat">Chat</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_signOut">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_restaurant_fragment">Hello restaurant fragment</string>

    <!-- String related to EditProfile-->
    <string name="title_activity_editProfile">Manage Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_help_fragment">This is the help pages.</string>

    <string name="hello_about_fragment">This is the about us pages.</string>

    <string-array name="number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

    <string-array name="city_array">
        <item>Kuala Lumpur</item>
        <item>Johor Bahru</item>
        <item>Penang</item>
    </string-array>

    <string name="faq_str1">After you place an online order, we transfer it to thw restaurant which will then start preparing your food. Our restaurants do everything they can to get your food delivered as quickly as posile. However, heavy traffic or unexpectedly high demand ay cause delays to your food delivery. Please bear with us. If it is been too long, you can contact us and we will find out what is going on immediately.</string>
    <string name="faq_str2">If you have a voucher code, you can redeem it after selecting a restaurant and adding items to your basket. You will see a field to enter your voucher code on the order overview page. If the voucher is valid,the discount on your order will be calculated immediately. Only one voucher can used per order. If your voucher code does not work, please try it on different browser. Otherwise, contact us and we will be happy to assist you.</string>
    <string name="faq_str3">With regard to order cancellation or refund of a payment you have made online, Feel free to coordinate with our Customer Service phone to contact us </string>
    <string name="title_activity_main_rider">MainRider</string>
    <string name="action_settings">Settings</string>


</resources>
