<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />

        <item
            android:id="@+id/nav_editProfile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="Edit Profile" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="Order" />

        <item
            android:id="@+id/nav_addressBook"
            android:title="Address Book" />

        <item
            android:id="@+id/nav_rewardRedemption"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="Reward/Redemption" />

    </group>

    <item android:title="Communicate">

        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/action_about"
                app:actionViewClass="android.widget.FrameLayout" />

                <item
                    android:id="@+id/nav_help"
                    android:title="@string/action_help"
                    app:actionViewClass="android.widget.FrameLayout" />

            <item
                android:id="@+id/nav_signOut"
                android:title="@string/action_signOut"
                app:actionViewClass="android.widget.FrameLayout" />
        </menu>
    </item>

</menu>
