<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="wrap_content"
        android:layout_height="324dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="textPhonetic"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/email_register_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="email_register_button_click"
                android:text="@string/action_register" />

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/action_sign_in" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonForgetPassword"
            android:layout_width="159dp"
            android:layout_height="38dp"
            android:layout_gravity="left"
            android:layout_margin="30dp"
            android:layout_toEndOf="@+id/buttonLayout"
            android:background="@android:color/white"
            android:text="Forgot Password?"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#0000CD" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonJoinUsRider"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonJoinUsRestaurantOwner"
        android:layout_marginStart="158dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/login_progress"
        android:onClick="joinUsRider_click"
        android:text="Join Us with as a Rider?"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonJoinUsRestaurantOwner"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/login_progress"
        android:onClick="joinUsRestaurantOwner_click"
        android:text="Join Us with as a Partner?"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />

</RelativeLayout>