<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".editProfile">

    <!-- TODO: Update blank fragment layout -->

    <!-- imageView  -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="367dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="370dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nav_header_subtitle" />


    </LinearLayout>
    <!-- name  -->
    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="324dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Names"
            android:inputType="textPersonName" />

    </LinearLayout>
    <!-- contact number  -->
    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="233dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Contact Number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="xxx-xxxxxxx"
            android:inputType="textPhonetic" />

    </LinearLayout>
    <!--  email  -->
    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="278dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="abc@gmail.com"
            android:inputType="textEmailAddress" />

    </LinearLayout>

</RelativeLayout>